Update CustomStackExample.java